# glintefy

./: .btx-review.yaml.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  README.md  README_MCP.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
LLM-CONTEXT/btx_fix_mcp/review/docs/: docs_summary.md  docstring_coverage.json  issues.json  missing_docstrings.json  project_docs.json  result.json
LLM-CONTEXT/btx_fix_mcp/review/perf/: hotspots.json  issues.json  pattern_issues.json  perf_summary.md  result.json  test_timing.json
LLM-CONTEXT/btx_fix_mcp/review/quality/: architecture_analysis.json  beartype_check.json  code_churn.json  cognitive.json  complexity.json  dead_code.json  docstring_coverage.json  duplication_analysis.txt  function_issues.json  halstead.json  import_cycles.json  issues.json  maintainability.json  quality_summary.md  raw_metrics.json  result.json  ruff_report.json  test_analysis.json  type_coverage.json
LLM-CONTEXT/btx_fix_mcp/review/report/: all_issues.json  all_issues_critical_0001.json  all_issues_error_0001.json  all_issues_info_0001.json  all_issues_warning_0001.json  all_issues_warning_0002.json  all_issues_warning_0003.json  all_issues_warning_0004.json  all_issues_warning_0005.json  code_review_report.md  issues_code_duplication_warning_0001.json  issues_code_duplication_warning_0002.json  issues_god_object_error_0001.json  issues_high_cognitive_complexity_warning_0001.json  issues_high_complexity_error_0001.json  issues_high_complexity_warning_0001.json  issues_high_coupling_warning_0001.json  issues_low_docstring_coverage_warning_0001.json  issues_low_maintainability_warning_0001.json  issues_low_type_coverage_warning_0001.json  issues_missing_docstring_warning_0001.json  issues_missing_readme_section_warning_0001.json  issues_nested_iteration_warning_0001.json  issues_nested_loop_warning_0001.json  issues_outdated_warning_0001.json  issues_range_len_warning_0001.json  issues_runtime_check_optimization_info_0001.json  issues_runtime_type_error_error_0001.json  issues_slow_test_critical_0001.json  issues_too_long_warning_0001.json  issues_too_nested_warning_0001.json  issues_unknown_info_0001.json  issues_unknown_info_0002.json  metrics.json  report_summary.md  result.json  verdict.json
LLM-CONTEXT/btx_fix_mcp/review/scope/: files_code.txt  files_config.txt  files_docs.txt  files_other.txt  files_test.txt  files_to_review.txt  result.json  scope_summary.md
LLM-CONTEXT/btx_fix_mcp/review/security/: bandit_full.json  result.json  security_issues.json  security_summary.md
docs/: ARCHITECTURE_DIAGRAM.md  CACHE_SUBSERVER.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  INDEX.md  LLM_PROVIDERS_SUMMARY.md  MCP_ARCHITECTURE.md  MIGRATION_GUIDE.md  MULTI_PROVIDER_SETUP.md  PROFILING_SUMMARY.md  PROVIDER_CLAUDE_CLI.md  QUICKSTART_INTERNAL_LLM.md  cache_analysis_final_architecture.md  cache_profiling_README.md  cache_profiling_guide.md  llm_configuration_guide.md
docs/architecture/: OVERVIEW.md
docs/archive/cache_development/: cache_analysis_config_verification.md  cache_analysis_implementation_summary.md  cache_analysis_isolation_fix.md  cache_analysis_source_modification.md  cache_profiling_quick_reference.md  implementation_plan_cache_analysis.md
docs/archive/examples/: actionable_results_example.py  profile_my_app_template.py
docs/archive/old_docs/: ARCHITECTURE_SUMMARY.md  CACHE_PROFILING_COMPLETE.md  HOW_TO_PROFILE.md  IMPLEMENTATION_STATUS.md  MCP_ACTIONABLE_RESULTS.md  README_MCP.md  internal_llm_usage.md
docs/cli/: QUICKSTART.md  REFERENCE.md
docs/examples/: actionable_results_example.py  llm_independence_demo.md  profile_my_app_template.py
docs/mcp/: QUICKSTART.md  TOOLS.md
docs/reference/: CONFIGURATION.md
docs/systemdesign/: module_reference.md
scripts/: _utils.py  dependencies.py  profile_application.py  test.py
src/: defaultconfig.toml
src/btx_fix_mcp/: __init__conf__.py  __main__.py  behaviors.py  cli.py  config.py  defaultconfig.toml  tools_venv.py
src/btx_fix_mcp/scripts/: __init__.py  profile_application.py
src/btx_fix_mcp/servers/: __init__.py  review.py  review_handlers.py  review_tools.py
src/btx_fix_mcp/subservers/: base.py
src/btx_fix_mcp/subservers/common/: chunked_writer.py  files.py  git.py  issues.py  llm_client.py  llm_providers.py  logging.py  mindsets.py  protocol.py
src/btx_fix_mcp/subservers/review/: __init__.py  cache_subserver.py  deps.py  deps_scanners.py  docs.py  perf.py  quality.py  report.py  scope.py  security.py
src/btx_fix_mcp/subservers/review/cache/: __init__.py  batch_screener.py  cache_models.py  hotspot_analyzer.py  individual_validator.py  pure_function_detector.py  source_patcher.py
src/btx_fix_mcp/subservers/review/quality/: __init__.py  architecture.py  base.py  complexity.py  config.py  issues.py  metrics.py  orchestrator.py  results.py  special_analyzers.py  static.py  summary.py  tests.py  types.py  writer.py
src/glintefy/: __init__conf__.py
tests/: test_behaviors.py  test_cli.py  test_config.py  test_module_entry.py  test_scripts.py  test_tools_venv.py
tests/integration/: test_review_workflow.py
tests/servers/: test_review.py  test_review_handlers.py
tests/subservers/: test_base.py
tests/subservers/common/: test_files.py  test_git.py  test_issues.py  test_logging.py  test_mindsets.py  test_protocol.py
tests/subservers/review/: test_deps.py  test_deps_scanners.py  test_docs.py  test_perf.py  test_quality.py  test_report.py  test_scope.py  test_scope_config.py  test_security.py
tests/subservers/review/quality/: test_architecture.py  test_complexity.py  test_issues.py  test_metrics.py  test_static.py  test_tests.py  test_types.py
