[project]
name = "btx_fix_mcp"
version = "0.1.0"
description = "MCP servers for code review and automated fixing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.22.0",
    "bandit>=1.9.0",
    "radon>=6.0.1",
    "pytest>=9.0.0",
    "gitpython>=3.1.45",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "rich-click>=1.9.4",
    "lib-layered-config>=2.0.0",
    "pydantic>=2.0.0",
]
license = { text = "MIT" }
authors = [{ name = "bitranox", email = "bitranox@gmail.com" }]
keywords = ["logging", "rich", "cli", "terminal", "ansi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/bitranox/btx_fix_mcp"
Repository = "https://github.com/bitranox/btx_fix_mcp.git"
Issues = "https://github.com/bitranox/btx_fix_mcp/issues"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
  "pytest-asyncio>=1.3.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.14.6",
  "pyright>=1.1.407",
  "black>=25.11.0",
  "mypy>=1.18.0",
  "build>=1.3.0",
  "twine>=6.2.0",
  "codecov-cli>=11.2.3",
  "pip-audit>=2.9.0",
  "textual>=6.6.0",
  "import-linter>=2.5.2",
  "setuptools>=78.1.1"
]
# Analysis tools installed in isolated venv by tools_venv module
# These are NOT installed with pip install btx_fix_mcp
# Instead, they're installed on-demand in ~/.cache/btx-fix-mcp/tools-venv/
tools = [
  "ruff>=0.14.6",
  "mypy>=1.18.0",
  "pylint>=3.3.0",
  "vulture>=2.14",
  "interrogate>=1.7.0",
  "beartype>=0.21.0",
  "radon>=6.0.1",
  "bandit>=1.9.0",
]

[project.scripts]
btx_fix_mcp = "btx_fix_mcp.cli:main"
bitranox-template-py-cli = "btx_fix_mcp.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"



[tool.hatch.build.targets.wheel]
packages = ["src/btx_fix_mcp"]
include = ["src/btx_fix_mcp/py.typed"]

[tool.ruff]
line-length = 160
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
# ignore the "unused import sys" in the jupyter notebook - which we need (it is a linter hickup)
"notebooks/*.ipynb" = ["F401"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
extraPaths = [
  "src",
]
exclude = [
  "scripts/menu.py",
  "tests/",
]
# Allow unknown types from external libraries
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportPrivateUsage = false
reportMissingTypeArgument = false
reportAttributeAccessIssue = false
reportOperatorIssue = false
reportOptionalOperand = false
reportArgumentType = false
reportCallIssue = false
reportIndexIssue = false
reportAssignmentType = false
reportOptionalMemberAccess = false
reportPossiblyUnboundVariable = false
reportUnusedVariable = false
reportUnknownLambdaType = false

[tool.bandit]
# Skip subprocess checks - this is a legitimate tool that needs to run external commands
skips = ["B603", "B404", "B110"]

[tool.pytest.ini_options]
# Coverage disabled by default due to Python 3.14 sqlite lock issues
# Run with: pytest --cov=src/btx_fix_mcp --cov-report=term-missing
addopts = ["-v"]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
  "os_agnostic: test runs on every supported operating system",
  "os_windows: test exercises Windows-only behavior",
  "os_macos: test exercises macOS-only behavior",
  "os_posix: test exercises behavior requiring POSIX semantics",
  "os_linux: test exercises Linux-only behavior",
]

[tool.coverage.run]
branch = true
parallel = false
data_file = ".coverage.unit"
source = ["src/btx_fix_mcp"]

[tool.coverage.report]
omit = [
  "tests/*",
]
fail_under = 70
show_missing = true

[tool.importlinter]
root_package = "btx_fix_mcp"

[[tool.importlinter.contracts]]
name = "CLI depends on behaviors only"
type = "layers"
layers = [
  "btx_fix_mcp.cli",
  "btx_fix_mcp.behaviors",
]
